finished optimazation and fixed some small bugs Replying was broken Commnet score section was weird Textarea was wrong size added box-shadow to send button optimazation seems to have reduced #rerenders by half and change the average rerender to ~15ms worst rerender dropping from ~100 ms to <25ms

--- a/src/css/RedditScore.css
+++ b/src/css/RedditScore.css
@@ -1,7 +1,8 @@
 .score {
   display: flex;
-  justify-content: "space-between";
-  align-items: "center";
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .comment-upvote:hover,
